--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@capacitor/core": "^2.4.0",
     "boxicons": "^2.0.5",
     "core-js": "^3.6.5",
+    "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuesax": "^4.0.1-alpha.24"
