--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@capacitor/core": "^2.4.0",
     "boxicons": "^2.0.5",
     "core-js": "^3.6.5",
+    "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuesax": "^4.0.1-alpha.24"
+    "vuesax": "^4.0.1-alpha.24",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-router": "^4.5.0",
+    "@vue/cli-plugin-vuex": "^4.5.4",
     "@vue/cli-service": "^4.5.0",
     "vue-template-compiler": "^2.6.11"
   }
