--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.5",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuesax": "^4.0.1-alpha.24",
