--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@capacitor/cli": "^2.4.0",
     "@capacitor/core": "^2.4.0",
     "boxicons": "^2.0.5",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-sms-reader": "0.0.3",
     "core-js": "^3.6.5",
+    "moment": "^2.28.0",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "stylus": "^0.54.8",
